It works for the most part